# chalaxata-rs

./: Cargo.toml  README.md
src/: chord.rs  data.rs  lib.rs  main.rs  note.rs  playable.rs  score.rs
src/gui/: mod.rs
